// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullScreenContent renders a message as expected with an image 1`] = `
<View>
  <View>
    <IconButton
      hitSlop={10}
      onPress={[MockFunction]}
      size={20}
      source={
        Object {
          "testUri": "../../../packages/aws-amplify-react-native/src/icons/close.png",
        }
      }
      testID="aws-amplify__in-app-messaging--close-button"
    />
    <View>
      <Image
        source={
          Object {
            "uri": "asset.png",
          }
        }
        testID="aws-amplify__in-app-messaging--image"
      />
    </View>
    <View />
  </View>
</View>
`;

exports[`FullScreenContent renders a message as expected without an image 1`] = `
<View>
  <View>
    <IconButton
      hitSlop={10}
      onPress={[MockFunction]}
      size={20}
      source={
        Object {
          "testUri": "../../../packages/aws-amplify-react-native/src/icons/close.png",
        }
      }
      testID="aws-amplify__in-app-messaging--close-button"
    />
    <View />
  </View>
</View>
`;
